unpackaged/main/default/objects/User/fields/Admissions_Competition_Team__c.field-meta.xml
<CustomField>
    <fullName>Admissions_Competition_Team__c</fullName>
    <description>This field is used for when Admissions has competitions and needs to put counselors on teams so that reports and dashboards can report off this field.</description>
    <label>Admissions Competition Team</label>
    <length>100</length>
    <type>Text</type>
</CustomField>