unpackaged/main/default/objects/User/fields/Calendly_Family_Interview_Link__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Family_Interview_Link__c</fullName>
    <inlineHelpText>Input the specific URL to schedule a Family Interview with you.</inlineHelpText>
    <label>Calendly Family Interview Link</label>
    <type>Url</type>
</CustomField>