unpackaged/main/default/objects/User/fields/High_School_Event_QR_Code__c.field-meta.xml
<CustomField>
    <fullName>High_School_Event_QR_Code__c</fullName>
    <formula>IMAGE(&#39;https://chart.googleapis.com/chart?chs=200x200&amp;cht=qr&amp;chl=https://vertoed.secure.force.com/RequestInformation?cid=&#39;&amp;Id ,&#39;Scan QR code to open record in mobile.&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>High School Event QR Code</label>
    <type>Text</type>
</CustomField>