unpackaged/main/default/objects/User/fields/Override_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Override_Workflow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Workflow</label>
    <type>Checkbox</type>
</CustomField>