unpackaged/main/default/objects/User/fields/SF_ID18_User__c.field-meta.xml
<CustomField>
    <fullName>SF_ID18_User__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SF_ID18_User</label>
    <type>Text</type>
</CustomField>